# coinbot-alpha

./: .env.example  README.md  pyproject.toml
scripts/: resolve_demo_seeds.py
src/coinbot_alpha/: config.py  main.py  schemas.py
src/coinbot_alpha/data/: binance.py  polymarket.py  polymarket_clob.py
src/coinbot_alpha/execution/: paper.py
src/coinbot_alpha/risk/: kill_switch.py  limits.py
src/coinbot_alpha/strategy/: base.py  momentum.py
src/coinbot_alpha/telemetry/: alerts.py  audit.py  logging.py  metrics.py
tests/: test_risk_limits.py
